// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtonsGroup component should not render the dropdown if there 3 or less actions 1`] = `
<Group
  className="container"
>
  <Connect(Component)
    key="action1"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
      ]
    }
    payload={Object {}}
    setModalOpen={[Function]}
    title={
      <div>
        Option 1
      </div>
    }
  >
    <div>
      Option 1
    </div>
  </Connect(Component)>
  <Connect(Component)
    key="action2"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
      ]
    }
    payload={Object {}}
    setModalOpen={[Function]}
    title={
      <div>
        Option 1
      </div>
    }
  >
    <div>
      Option 1
    </div>
  </Connect(Component)>
  <Connect(Component)
    key="action3"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
      ]
    }
    payload={Object {}}
    setModalOpen={[Function]}
    title={
      <div>
        Option 1
      </div>
    }
  >
    <div>
      Option 1
    </div>
  </Connect(Component)>
</Group>
`;

exports[`ActionButtonsGroup component should render null if there's no actions 1`] = `""`;

exports[`ActionButtonsGroup component should render the dropdown if there more than 3 actions 1`] = `
<Group
  className="container"
>
  <Connect(Component)
    key="action1"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
      ]
    }
    payload={Object {}}
    setModalOpen={[Function]}
    title={
      <div>
        Option 1
      </div>
    }
  >
    <div>
      Option 1
    </div>
  </Connect(Component)>
  <Connect(Component)
    key="action2"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
      ]
    }
    payload={Object {}}
    setModalOpen={[Function]}
    title={
      <div>
        Option 1
      </div>
    }
  >
    <div>
      Option 1
    </div>
  </Connect(Component)>
  <Connect(Component)
    key="action3"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
      ]
    }
    payload={Object {}}
    setModalOpen={[Function]}
    title={
      <div>
        Option 1
      </div>
    }
  >
    <div>
      Option 1
    </div>
  </Connect(Component)>
  <Dropdown
    a11y={true}
    active={false}
    addonType={false}
    direction="down"
    inNavbar={false}
    isOpen={false}
    nav={false}
    setActiveFromChild={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      color="secondary"
      tag="span"
    >
      <ForwardRef
        intent="secondary"
        size="small"
      >
        more_horiz
      </ForwardRef>
    </DropdownToggle>
    <DropdownMenu
      flip={true}
      right={true}
      tag="div"
    >
      <Connect(Component)
        key="action4"
        options={
          Array [
            Object {
              "label": "Option 1",
              "value": "option1",
            },
          ]
        }
        payload={Object {}}
        setModalOpen={[Function]}
        tag={[Function]}
        tagOptions={
          Object {
            "className": "dropdownItem",
            "toggle": false,
          }
        }
        title={
          <div>
            Option 1
          </div>
        }
      >
        <div>
          Option 1
        </div>
      </Connect(Component)>
    </DropdownMenu>
  </Dropdown>
</Group>
`;
